# tangible

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  NOTICE  README.md  ROADMAP.md
server/: README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_add_perf_indexes.py  0002_invitations.py  0002_user_locale.py  0003_audit_log.py  0003_grocery_stores.py  0003_standalone_chores.py  0004_item_templates.py  0004_shopping_list_type.py  0005_documents.py  0007_photos_primary.py  0008_categories.py  0008_item_lot_idempotency_key.py  0010_pantry_grocery.py  0010_standalone_tasks.py  0011_consumable_dates.py  0011_task_assignment.py  0012_item_lots.py  0014_item_wanted.py  0015_item_archive_workflow.py  0025_locations.py  0026_manual_bundles.py  0027_phase12_completion_history_chores.py  0028_phase12_low_stock_consumables.py  0030_notification_channels.py  0032_item_sort_order.py  0033_totp.py  0035_item_comments.py
server/src/covet/: __init__.py  bootstrap.py  config.py  hardening.py  main.py
server/src/covet/api/: __init__.py  audit.py  auth.py  categories.py  chores.py  collections.py  comments.py  documents.py  imports.py  inventory.py  invitations.py  item_templates.py  items.py  locations.py  maintenance.py  manual_bundles.py  mcp_server.py  metadata.py  notifications.py  photos.py  share.py  system.py  webhooks.py
server/src/covet/importers/: base.py  (+3 more)
server/src/tangible/: __init__.py  bootstrap.py  cli.py  config.py  db.py  email.py  hardening.py  logging.py  main.py  observability.py  security.py
server/tests/: conftest.py  test_api_crud.py  test_audit.py  test_auth_api.py  test_cli.py  test_comments.py  test_config.py  test_documents.py  test_hardening.py  test_importers.py  test_imports_api.py  test_inventory_and_system.py  test_invitations.py  test_item_templates.py  test_locations.py  test_maintenance_parent.py  test_manual_bundles.py  test_mcp.py  test_members_api.py  test_meta.py  test_metadata_scraper.py  test_observability.py  test_oidc.py  test_phase12_maintenance_chores.py  test_photos.py  test_share_links.py  test_sync_api.py
(+332 files in other folders)
