[project]
name = "tangible"
version = "0.25.89"
description = "Self-hosted personal inventory management"
readme = "../README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [{ name = "Brad Brown Jr." }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.17",
    "itsdangerous>=2.2",
    "authlib>=1.3.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.4",
    "pillow>=11.0",
    "pillow-heif>=0.18",
    "defusedxml>=0.7",
    "prometheus-client>=0.21",
    "qrcode[pil]>=8.0",
    "reportlab>=4.0",
    "unidecode>=1.3",
    "pypdf>=5.1",
    "pyotp>=2.9",
    "pytesseract>=0.3.13",
    # DB drivers
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
    "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[project.scripts]
tangible = "tangible.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tangible"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# B008: FastAPI requires Depends()/Query()/etc. as default arguments — that's the idiom.
# E501: line length is enforced by formatter, not linter.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["automerge.*", "slowapi.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
